--- a/app/src/main/res/layout/activity_facing_cycle_up_direction_g94.xml
+++ b/app/src/main/res/layout/activity_facing_cycle_up_direction_g94.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFEB3B"
+        android:textColor="@color/black"
         android:text="@string/facing_cycle_up_direction_g94"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -70,6 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/s"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:background="@color/yellow"
                     android:textStyle="bold"/>
@@ -79,6 +81,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textColor="@color/black"
                     android:text="@string/_200"
                     android:inputType="number"/>
             </LinearLayout>
@@ -96,6 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/f"
+                    android:textColor="@color/black"
                     android:background="@color/yellow"
                     android:textSize="16sp"
                     android:textStyle="bold"/>
@@ -105,6 +109,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textColor="@color/black"
                     android:text="@string/_0_24"
                     android:inputType="numberDecimal"/>
             </LinearLayout>
@@ -122,6 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/w"
+                    android:textColor="@color/black"
                     android:background="@color/yellow"
                     android:textSize="16sp"
                     android:textStyle="bold"/>
@@ -131,6 +137,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textColor="@color/black"
                     android:text="@string/_0_1"
                     android:inputType="numberDecimal"/>
             </LinearLayout>
@@ -152,6 +159,7 @@
         <!-- Start Position -->
         <TextView
             android:id="@+id/startPositionTv"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
@@ -170,6 +178,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/g0Btn"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
@@ -181,6 +190,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="text"
+                android:textColor="@color/black"
                 android:text="@string/x0" />
 
             <EditText
@@ -188,6 +198,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/black"
                 android:inputType="text"
                 android:text="@string/z3" />
         </LinearLayout>
@@ -198,6 +209,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:textColor="@color/black"
             android:padding="4dp"
             android:text="@string/end_q"
             android:background="@color/yellow"
@@ -217,6 +229,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/black"
                 android:inputType="text"
                 android:text="@string/x52" />
 
@@ -226,6 +239,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="text"
+                android:textColor="@color/black"
                 android:text="@string/z0" />
         </LinearLayout>
     </LinearLayout>
@@ -246,6 +260,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/set"
+            android:textColor="@color/black"
             android:padding="8dp"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/deleteBtn"
@@ -253,6 +268,7 @@
             android:layout_marginStart="10dp"
             android:background="@color/lite_blue"
             android:layout_weight="1"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:text="@string/delete"
             android:padding="8dp"/>
