--- a/app/src/main/res/layout/activity_facing_cycle_down_dir.xml
+++ b/app/src/main/res/layout/activity_facing_cycle_down_dir.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="20dp">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/ccmt80Label"
+            android:id="@+id/cnmg80Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cnmg_80"
@@ -65,7 +65,7 @@
             android:layout_marginStart="5dp"
             android:textStyle="bold"
             android:background="@color/lite_blue"
-            android:layout_toEndOf="@id/ccmt80Label"
+            android:layout_toEndOf="@id/cnmg80Label"
             android:textSize="8sp"
             tools:ignore="SmallSp" />
 
@@ -83,7 +83,7 @@
             tools:ignore="SmallSp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/wnmgBtn"
+            android:id="@+id/wnmg80Btn"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:text="@string/take"
@@ -124,7 +124,7 @@
             tools:ignore="SmallSp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/dcmtLabel"
+            android:id="@+id/dnmgLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dnmg_55"
@@ -147,9 +147,9 @@
             android:background="@color/lite_blue"
             android:textColor="@color/black"
             android:layout_marginStart="5dp"
-            android:layout_below="@id/wnmgBtn"
+            android:layout_below="@id/wnmg80Btn"
             android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/dcmtLabel"
+            android:layout_toEndOf="@id/dnmgLabel"
             android:textSize="8sp"
             tools:ignore="SmallSp" />
 
@@ -162,7 +162,7 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginTop="30dp"
-            android:layout_below="@id/dcmtLabel"
+            android:layout_below="@id/dnmgLabel"
             android:background="@color/yellow"
             android:textSize="10sp"
             tools:ignore="SmallSp" />
@@ -195,7 +195,7 @@
             android:layout_marginStart="10dp"
             android:textStyle="bold"
             android:layout_marginTop="30dp"
-            android:layout_below="@id/dcmtLabel"
+            android:layout_below="@id/dnmgLabel"
             android:layout_toEndOf="@id/noseCompEt"
             android:background="@color/yellow"
             android:textSize="10sp"
@@ -221,7 +221,7 @@
             android:ems="10"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/finishingAllowaceLabel"
+            android:id="@+id/finishingAllowanceLabel"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/noseCompLabel"
@@ -240,7 +240,7 @@
             android:layout_below="@id/noseRadiusLabel"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/finishingAllowaceLabel"
+            android:layout_toEndOf="@id/finishingAllowanceLabel"
             android:background="@color/lite_blue"
             android:elevation="2dp"
             android:ems="10"
@@ -258,7 +258,7 @@
             android:layout_height="wrap_content"
             android:background="@color/yellow"
             android:text="@string/zero_point"
-            android:layout_below="@id/finishingAllowaceLabel"
+            android:layout_below="@id/finishingAllowanceLabel"
             android:textColor="@color/black"
             android:layout_marginTop="30dp"
             android:textSize="10sp"
@@ -308,7 +308,7 @@
             android:layout_toEndOf="@+id/toolBtn"
             android:background="@color/lite_blue"
             android:elevation="2dp"
-            android:layout_below="@id/finishingAllowaceLabel"
+            android:layout_below="@id/finishingAllowanceLabel"
             android:layout_marginTop="30dp"
             android:ems="10"
             android:hint="@string/_0101"
