--- a/app/src/main/res/layout/activity_external_roughing_cycle_zdirection_g71.xml
+++ b/app/src/main/res/layout/activity_external_roughing_cycle_zdirection_g71.xml
@@ -286,7 +286,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/toolBtn"
+                android:id="@+id/spindleLimit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -305,7 +305,7 @@
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_toEndOf="@+id/toolBtn"
+                android:layout_toEndOf="@+id/spindleLimit"
                 android:background="@color/lite_blue"
                 android:elevation="2dp"
                 android:layout_below="@id/finishingAllowanceLabel"
@@ -355,7 +355,7 @@
                 android:id="@+id/coolantOffBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/toolBtn"
+                android:layout_below="@id/spindleLimit"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_toEndOf="@id/coolantOnEt"
